--- a/wa/wa1/portfolio/index.html
+++ b/wa/wa1/portfolio/index.html
@@ -5,15 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken's New Portfolio</title>
 </head>
+
 <body>
-    <div class"Header-about">
-        <div class "header">
+    <div class="Header-about">
+        <div class="header">
             <h1>Ken Fujiwara </h1>
             <p>Hello, I'm a junior at CU Boulder</p>
             <img src="img/me.JPG" alt="picture">
         </div>
-    </div> class="about">
+    </div>
     <h2>About Me</h2>
-    
+    <p>Hello, Im 20, I am studying CTD and minoring in business. I also run a boutique aero mirror business and resell stuff on ebay and depop.</p>
+<div class="Interests">
+    <h2>Interests</h2>
+    <ul>
+        <li>90s-2000s Subarus, aero and tuning</li>
+        <li>Freeride mountain biking, dirt jumping and downhill</li>
+        <li>Skiing park and cliffs</li>
+    </ul>
+</div>
+<div class="Goals">
+    <h2>Goals</h2>
+    <ol>
+        <li>Offer aero mirrors for Subaru GC, BG, SF, BC Chassis and more if I get my supply chain in order :P</li>
+        <li>Become well versed in various manufacturing methods</li>
+        <li>Graduate</li>
+        <li>Go skiing and biking in beautiful remote places</li>
+        <li>Upgrading my Subarus to the max</li>
+    </ol>
+</div>
+<div class="Contact">
+    <h2>Contact me</h2>
+    <p>Contact me through my <a href="https://www.fujiken.one">website</a></p>
+    <p>Or email me at <a href="mailto:hikensky@gmail.com">hikensky@gmail.com</a></p>
+</div>
+
 </body>
 </html>
