--- a/wa3/projects.html
+++ b/wa3/projects.html
@@ -4,6 +4,100 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ken Fujiwara</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #2D6A4F;
+      --secondary: #4DA6FF;
+      --accent: #F77F00;
+      --neutral-dark: #8B5E3C;
+      --neutral-light: #F8F9FA;
+    }
+
+    html {
+      font-family: "Bebas Neue", sans-serif;
+      line-height: 1.5;
+    }
+
+    body {
+      margin: 0;
+      background-color: var(--neutral-light);
+      color: #333;
+    }
+
+    header {
+      background-color: var(--primary);
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 1rem 0 0;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: var(--neutral-light);
+      font-size: 1.2rem;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: var(--accent);
+    }
+
+    .about {
+      background-color: var(--secondary);
+      color: #000;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    .about img {
+      border: 4px solid white;
+      border-radius: 10px;
+      max-width: 300px;
+      display: block;
+      margin: 1rem auto;
+    }
+
+    .featured-projects {
+      background-color: var(--neutral-dark);
+      color: white;
+      padding: 2rem;
+    }
+
+    .featured-projects a {
+      color: var(--accent);
+    }
+
+    .featured-projects a:hover {
+      text-decoration: underline;
+      color: var(--secondary);
+    }
+
+    footer {
+      background-color: var(--accent);
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+
+  </style>
 </head>
 <body>
   <header>
