--- a/wa3/index.html
+++ b/wa3/index.html
@@ -29,7 +29,7 @@
 
     header {
       background-color: var(--primary);
-      color: white;
+      color: neutral-light;
       padding: 1rem;
       text-align: center;
     }
@@ -68,15 +68,13 @@
     }
 
     .about img {
-      border: 4px solid white;
+      border: 4px var(--neutral-light);
       border-radius: 10px;
       max-width: 300px;
       display: block;
       margin: 1rem auto;
     }
 
-    
-    
 
     .featured-projects {
       background-color: var(--neutral-dark);
@@ -85,17 +83,17 @@
     }
 
     .featured-projects a {
-      color: var(--accent);
+      color: var(--neutral-light);
     }
 
     .featured-projects a:hover {
-      text-decoration: none;
-      color: whitestone;
+      text-decoration: underline;
+      color: var(--secondary);
     }
 
     footer {
       background-color: var(--accent);
-      color: white;
+      color: var(--neutral-light);
       text-align: center;
       padding: 1rem;
     }
