--- a/wa3/projects.html
+++ b/wa3/projects.html
@@ -68,7 +68,7 @@
     }
 
     .about img {
-      border: 4px solid white;
+      border: 4px solid var(--neutral-light);
       border-radius: 10px;
       max-width: 300px;
       display: block;
@@ -77,12 +77,12 @@
 
     .featured-projects {
       background-color: var(--neutral-dark);
-      color: white;
+      color: var(--neutral-light);
       padding: 2rem;
     }
 
     .featured-projects a {
-      color: var(--accent);
+      color: var(--neutral-light);
     }
 
     .featured-projects a:hover {
@@ -92,7 +92,7 @@
 
     footer {
       background-color: var(--accent);
-      color: white;
+      color: var(--neutral-light);
       text-align: center;
       padding: 1rem;
     }
