--- a/wa3/projects.html
+++ b/wa3/projects.html
@@ -68,7 +68,7 @@
     }
 
     .about img {
-      border: 4px solid var(--neutral-light);
+      border: 4px solid white;
       border-radius: 10px;
       max-width: 300px;
       display: block;
