--- a/wa5/index.html
+++ b/wa5/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Impreza Parts Hub</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <nav class="main-nav">
-  <div class="nav-brand">Community Hub</div>
-  <button class="nav-toggle" aria-label="Toggle navigation menu">
+  <div class="nav-brand">First Gen Impreza Parts Hub</div>
+
+  <button class="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
     <span></span>
     <span></span>
     <span></span>
   </button>
-  <ul class="nav-menu">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#resources">Resources</a></li>
-    <li><a href="#events">Events</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
+
+  <div class="nav-burger-menu">
+    <ul class="nav-menu">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#listings">Listings</a></li>
+      <li><a href="#reproduction">Reproduction Guides</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
 </nav>
+
 <script src="script.js" defer></script>
 </body>
 </html>
