--- a/wa5/index.html
+++ b/wa5/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,16 +19,82 @@
     <span></span>
   </button>
 
-  <div class="nav-burger-menu">
-    <ul class="nav-menu">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#listings">Listings</a></li>
-      <li><a href="#reproduction">Reproduction Guides</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </div>
+  <ul class="nav-menu">
+    <!-- Parts dropdown -->
+    <li class="nested-menu">
+      <button class="dropdown-toggle">Parts ▾</button>
+      <ul class="sub-menu">
+        <!-- Trim -->
+        <li class="nested-menu">
+          <button class="dropdown-toggle">Trim ▸</button>
+          <ul class="sub-menu">
+            <li><button data-category="all">Show All</button></li>
+            <li><button data-category="seals-trim">Seals</button></li>
+            <li><button data-category="door-trim">Door</button></li>
+            <li><button data-category="roof-trim">Roof</button></li>
+            <li><button data-category="trunk-trim">Trunk</button></li>
+          </ul>
+        </li>
+        <!-- Mechanical -->
+        <li class="nested-menu">
+          <button class="dropdown-toggle">Mechanical ▸</button>
+          <ul class="sub-menu">
+            <li><button data-category="all">Show All</button></li>
+            <li><button data-category="engine">Engine</button></li>
+            <li><button data-category="wiring">Wiring</button></li>
+            <li><button data-category="fueling">Fueling</button></li>
+            <li><button data-category="suspension">Suspension</button></li>
+          </ul>
+        </li>
+        <!-- Electrical -->
+        <li class="nested-menu">
+          <button class="dropdown-toggle">Electrical ▸</button>
+          <ul class="sub-menu">
+            <li><button data-category="all">Show All</button></li>
+            <li><button data-category="lighting">Lighting</button></li>
+            <li><button data-category="battery">Battery</button></li>
+            <li><button data-category="sensors">Sensors</button></li>
+          </ul>
+        </li>
+        <!-- Interior -->
+        <li class="nested-menu">
+          <button class="dropdown-toggle">Interior ▸</button>
+          <ul class="sub-menu">
+            <li><button data-category="all">Show All</button></li>
+            <li><button data-category="seats">Seats</button></li>
+            <li><button data-category="dashboard">Dashboard</button></li>
+            <li><button data-category="carpet">Carpet</button></li>
+          </ul>
+        </li>
+        <!-- Exterior -->
+        <li class="nested-menu">
+          <button class="dropdown-toggle">Exterior ▸</button>
+          <ul class="sub-menu">
+            <li><button data-category="all">Show All</button></li>
+            <li><button data-category="bumpers">Bumpers</button></li>
+            <li><button data-category="fenders">Fenders</button></li>
+            <li><button data-category="quarterpanels">Quarter Panels</button></li>
+            <li><button data-category="mirrors">Mirrors</button></li>
+            <li><button data-category="grilles">Grilles</button></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#community">Community</a></li>
+  </ul>
 </nav>
 
+<!-- Slideshow Functionality -->
+<section class="slideshow">
+  <img src="img/blackrs25stock.jpg" class="slide active" style="width: 50%;">
+  <img src="img/25rsstock1.jpg" class="slide" style="width: 50%;">
+  <img src="img/red25rsstock.jpg" class="slide" style="width: 50%;">
+  <button class="prev">‹</button>
+  <button class="next">›</button>
+</section>
+
 <script src="script.js" defer></script>
+
 </body>
 </html>
