--- a/wa5/index.html
+++ b/wa5/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav class="main-nav">
-  <div class="nav-brand">First Gen Impreza Parts Hub</div>
+  <div class="nav-brand">First Gen Impreza Reproduction Parts Hub</div>
 
   <button class="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
     <span></span>
@@ -87,9 +87,9 @@
 
 <!-- Slideshow Functionality -->
 <section class="slideshow">
-  <img src="img/blackrs25stock.jpg" class="slide active" style="width: 50%;">
-  <img src="img/25rsstock1.jpg" class="slide" style="width: 50%;">
-  <img src="img/red25rsstock.jpg" class="slide" style="width: 50%;">
+  <img src="img/blackrs25stock.jpg" class="slide active">
+  <img src="img/25rsstock1.jpg" class="slide">
+  <img src="img/red25rsstock.jpg" class="slide">
   <button class="prev">‹</button>
   <button class="next">›</button>
 </section>
