--- a/ica7/index.html
+++ b/ica7/index.html
@@ -114,9 +114,9 @@
 
   <div id="savedRequest"></div>
   <button id="clearRequest">Clear My Request</button>
-  <button class="privacy-btn" onclick="document.getElementById('privacy').scrollIntoView({behavior:'smooth'});">
-    Privacy Statement
- </button>
+  <button class="privacy-btn">
+  <a href="privacy.html" class="privacy-btn-link">Privacy Statement</a>
+</button>
 </section>
 
 <script src="script.js" defer></script>
