Updates to a page

--- a/ica7/privacy.html
+++ b/ica7/privacy.html
@@ -1,3 +1,12 @@
+<link rel="stylesheet" href="style.css">
+
+<div class="theme-switcher">
+  <button class="nav-menu-button" onclick="setTheme('light')">Light</button>
+  <button class="nav-menu-button" onclick="setTheme('dark')">Dark</button>
+</div>
+
+
+
 <section id="privacy" class="privacy-box">
   <h2>Privacy Statement — Subaru Reproduction Part Requests</h2>
   <p>
@@ -15,3 +24,7 @@
     If you choose to export requests, a downloadable JSON file is created and saved to your device only.  
   </p>
 </section>
+
+<button class="back-btn" onclick="window.location.href='index.html'">
+  Back to Home
+</button>
