--- a/ica10/index.html
+++ b/ica10/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app">
-        <header>Random Christmas Trivia</header>
+        <header>Random Trivia</header>
         <section class="quotes">
           <div class="quote-text" id="js-quote-text"></div>
           <div class="quote-text" id="js-answer-text"></div>
