--- a/ica9/index.html
+++ b/ica9/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Persuasive Button Micro-Interaction</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Christmas Trivia</title>
+    <link rel="stylesheet" href="ica11-style.css">
 </head>
 <body>
-  <div class="container">
-    <button class="cta-button">Click Me</button>
-  </div>
-  <script src="script.js"></script>
+    <div class="app">
+        <header>Random Christmas Trivia</header>
+        <section class="quotes">
+          <div class="quote-text" id="js-quote-text"></div>
+          <div class="quote-text" id="js-answer-text"></div>
+        </section>
+        <section class="controls" >
+          <button type="button" id="js-new-quote" class="new-quote button">
+            Generate a new bit of trivia!
+          </button>
+          <button type="button" id="js-tweet" class="twitter button">
+            Show me the answer!
+          </button>
+        </section>
+      </div>
+      <script src="ica11.js"></script>
 </body>
 </html>
