--- a/ica10/index.html
+++ b/ica10/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Christmas Trivia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="app">
-        <header>Random Trivia</header>
+        <header>Random Christmas Trivia</header>
         <section class="quotes">
-          <div class="quote-text" id="js-quote-text"></div>
+          <div class="quote-text" id="js-quote-text">Click the button to get a Christmas trivia question!</div>
           <div class="quote-text" id="js-answer-text"></div>
         </section>
-        <section class="controls" >
+        <section class="controls">
           <button type="button" id="js-new-quote" class="new-quote button">
             Generate a new bit of trivia!
           </button>
-          <button type="button" id="js-tweet" class="twitter button">
+          <button type="button" id="js-show-answer" class="twitter button">
             Show me the answer!
           </button>
-          <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
         </section>
       </div>
-      <script src="ica11.js"></script>
+      <script src="script.js"></script>
 </body>
-</html> 
+</html>
