--- a/wa12/wa12.html
+++ b/wa12/wa12.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1 id="page-title">Find Nearby E85 Stations</h1>
-    <p id="subtitle">Quickly locate E85 (flex-fuel) stations near you. Accessible, keyboard-friendly demo for wa12.</p>
+    <p id="subtitle">Quickly locate E85 (flex-fuel) stations near you</p>
   </header>
 
   <main>
