--- a/ica8/index.html
+++ b/ica8/index.html
@@ -99,9 +99,9 @@
 
 <!-- slideshow -->
 <section class="slideshow">
-  <img class="slide active" src="img/blackrs25stock.jpg">
-  <img class="slide" src="img/25rsstock1.jpg">
-  <img class="slide" src="img/red25rsstock.jpg">
+  <img class="slide active" src="img/blackrs25stock.jpg" alt="Black Subaru Impreza RS parked">
+  <img class="slide" src="img/25rsstock1.jpg" alt="Blue Subaru Impreza RS side view">
+  <img class="slide" src="img/red25rsstock.jpg" alt="Red Subaru Impreza RS front view">
   <button class="prev">‹</button>
   <button class="next">›</button>
 </section>
@@ -122,9 +122,7 @@
   <div id="savedRequest"></div>
   <button id="clearRequest">Clear My Request</button>
   
-  <button class="privacy-btn">
-    <a href="privacy.html" class="privacy-btn-link">Privacy Statement</a>
-  </button>
+  <a href="privacy.html" class="privacy-btn-link">Privacy Statement</a>
 </section>
 
 <script src="script.js" defer></script>
