--- a/ica8/index.html
+++ b/ica8/index.html
@@ -122,7 +122,30 @@
   <div id="savedRequest"></div>
   <button id="clearRequest">Clear My Request</button>
   
-  <a href="privacy.html" class="privacy-btn-link">Privacy Statement</a>
+  <a href="privacy.html" class="privacy-btn privacy-btn-link">Privacy Statement</a>
+</section>
+
+<!-- rotating quotes -->
+<section class="quotes-section">
+  <h2>Community Quotes</h2>
+  <div class="quote-box">
+    <p id="current-quote">"Save the first gens!"</p>
+    <div class="quote-controls">
+      <button id="prev-quote">‹ Prev</button>
+      <span id="quote-counter">1 / 5</span>
+      <button id="next-quote">Next ›</button>
+    </div>
+  </div>
+</section>
+
+<!-- Cat picture section -->
+<section class="cat-section">
+  <h2>Cat!</h2>
+  <div class="cat-container">
+    <img id="cat-image" src="img/placeholder-cat.jpg" alt="Random cat picture">
+    <button id="new-cat-btn">More Cat</button>
+    <p class="cat-caption">Cat picture API</p>
+  </div>
 </section>
 
 <script src="script.js" defer></script>
